--- a/Traefik/traefik-RedirectScheme.yaml
+++ b/Traefik/traefik-RedirectScheme.yaml
@@ -1,8 +1,9 @@
 # Redirect to https
+---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: test-redirectscheme
+  name: redirect
 spec:
   redirectScheme:
     scheme: https
